Fix background on the elastic overflow

--- a/components/Noise/Noise.module.css
+++ b/components/Noise/Noise.module.css
@@ -14,6 +14,20 @@
   z-index: 99999999;
 }
 
+.background {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  overflow: hidden;
+  pointer-events: none;
+  z-index: -1;
+  @apply bg-background;
+}
+
 .noise .noiseImageWrapper {
   position: absolute;
   object-fit: fill;
